--- a/aap_controller_api_2_5/Containerfile
+++ b/aap_controller_api_2_5/Containerfile
@@ -1,5 +1,10 @@
 FROM registry.access.redhat.com/ubi9/python-312-minimal:latest AS production
 
+ARG AAP_GATEWAY_URL
+ARG AAP_SERVICE_URL
+ARG HOST
+ARG PORT
+
 ENV AAP_GATEWAY_URL=${AAP_GATEWAY_URL}
 ENV AAP_SERVICE_URL=${AAP_SERVICE_URL}
 ENV OPENAPI_SPEC_URL="file:///var/www/aap-controller-api.json"
@@ -7,8 +12,8 @@ ENV HOST=${HOST}
 ENV PORT=${PORT}
 ENV PYTHONUNBUFFERED=1
 ENV DEBUG=True
+USER root
 
-USER 1000
 WORKDIR /var/www/
 
 COPY ansible_mcp_tools/ ./ansible_mcp_tools/
@@ -17,6 +22,8 @@ COPY aap_controller_api_2_5/aap-controller-api.json ./
 COPY aap_controller_api_2_5/pyproject.toml ./pyproject.toml
 
 RUN python -m pip install --no-cache-dir --no-binary=all .
+
+USER 1000
 
 # Launch!
 ENTRYPOINT ["python3.12", "server.py"]
