--- a/aap_gateway_api_2_5/Containerfile
+++ b/aap_gateway_api_2_5/Containerfile
@@ -1,5 +1,9 @@
 FROM registry.access.redhat.com/ubi9/python-312-minimal:latest AS production
 
+ARG AAP_GATEWAY_URL
+ARG HOST
+ARG PORT
+
 ENV AAP_GATEWAY_URL=${AAP_GATEWAY_URL}
 ENV OPENAPI_SPEC_URL="file:///var/www/aap-gateway-api.yaml"
 ENV HOST=${HOST}
@@ -7,7 +11,7 @@ ENV PORT=${PORT}
 ENV PYTHONUNBUFFERED=1
 ENV DEBUG=True
 
-USER 1000
+USER root
 WORKDIR /var/www/
 
 COPY ansible_mcp_tools/ ./ansible_mcp_tools/
@@ -16,6 +20,8 @@ COPY aap_gateway_api_2_5/aap-gateway-api.yaml ./
 COPY aap_gateway_api_2_5/pyproject.toml ./pyproject.toml
 
 RUN python -m pip install --no-cache-dir --no-binary=all .
+
+USER 1000
 
 # Launch!
 ENTRYPOINT ["python3.12", "server.py"]
